# rhino-class

./: LICENSE  README.md  exercise.ghx  pyproject.toml  runner.ghx  runner_old.ghx  tri_runner.ghx
develop/: __init__.py  constants.py  module_reloader.py  module_watcher.py
logic/: __init__.py  sample_module.py  triangle_panel.py
logic/exercise/: __init__.py  attractor_bars.py  extruding_contours.py  triangle_panel.py
polyfill/: __init__.py  enum.py  pathlib.py  typing.py  typing_extensions.py
typings/: scriptcontext.pyi
